# litestar-hello-world-stale

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml  codeql.yml  test.yaml
tests/: test_app.py  test_main.py
