[tool.poetry]
name = "starlite-hello-world"
version = "0.1.0"
description = ""
authors = ["Peter Schutt <peter.github@proton.me>"]

[tool.poetry.dependencies]
python = "^3.10"
starlite = "*"
uvicorn = "*"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "*"
pre-commit = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.pylint.FORMAT]
max-line-length = "100"
